2004-08-03  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* Snapshotted redland-bindings_0_9_17_1 for 0.9.17.1 release

	* java/Makefile.am: Add run-java to dist

2004-07-28  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* autogen.sh: move 'rm's inside configure.ac loop

	* autogen.sh: Ensure subdirs get config.guess, config.sub

	* php/Makefile.am: maint clean the orig file

	* perl/lib/RDF/Redland.pm: Added links to Query and QueryResults

2004-07-27  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* php/Makefile.am:
	Oops, use -DREDLAND_INIT_I to get init of redland world by PHP

	* php/redland-post.i: declare static function prototypes

	* php/Makefile.am: Added redland_wrap.c.patch to dist

2004-07-26  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* Makefile.am: bindings in html

	* ruby/README.txt: grammar

2004-07-23  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* AUTHORS: Dominic Sisneros email

	* configure.ac: 0.9.17.1

	* python/test/test.py, python/RDF.py,
	perl/lib/RDF/Redland/Parser.pm, perl/serialize.pl,
	perl/example.pl, java/test2.java, java/test1.java,
	java/skeleton.java, csharp/examples/example4.cs,
	csharp/examples/example2.cs, csharp/examples/example1.cs,
	csharp/test.cs, csharp/Parser.cs: Replace parser name "raptor"
	with "rdfxml"

2004-07-20  Edd Dumbill  <edd@usefulinc.com>

	* csharp/Node.cs: Added my name to header.

2004-07-20  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* php/Makefile.am:
	redland-pre.i wasn't helping remove multiple defines warnings

	* php/redland-pre.i: undef things via command line

	* tcl/Makefile.am: Use TCL_DIR to remove use of backticks

	* configure.ac: Added TCL_DIR to remove use of backticks in a makefile

	* ruby/Makefile.am: Use RUBY_LIB, RUBY_DIR to remove use of backticks

	* configure.ac:
	Added RUBY_LIB, RUBY_DIR to remove use of backticks in a makefile
	Tidy

	* php/Makefile.am:
	Use PHP_EXTENSION_DIR to remove use of backticks in a makefile

	* configure.ac: