@@ -8,6 +8,11 @@
 
 <h1>Redland RDF Application Framework Bindings - News</h1>
 
+<h2>2004-08-03 Redland Bindings 0.9.18.1 Released</h2>
+
+<p>Rebuild for Redland 0.9.18 - no API changes</p>
+
+
 <h2>2004-08-03 Redland Bindings 0.9.17.1 Released</h2>
 
 <p>The first release of Redland Bindings separate from Redland.<br />
