@@ -21,6 +21,10 @@ pre
 
 <h1>Redland RDF Application Framework Bindings</h1>
 
+<h2 id="rel0_9_18_1"><a name="rel0_9_18_1">Redland Bindings 0.9.18-1 Changes</a></h2>
+
+<p>Rebuild for Redland 0.9.18 - no API changes</p>
+
 <h2 id="rel0_9_17_1"><a name="rel0_9_17_1">Redland Bindings 0.9.17-1 Changes</a></h2>
 
 <p>This is the first release of Redland Bindings separate from
