@@ -1,5 +1,7 @@
 2004-08-03  Dave Beckett  <Dave.Beckett@bristol.ac.uk>
 
+	* Snapshotted redland-bindings_0_9_18_1 for 0.9.18.1 release
+
 	* Snapshotted redland-bindings_0_9_17_1 for 0.9.17.1 release
 
 	* java/Makefile.am: Add run-java to dist
